# cpp_cmake_template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: default.yml  release-github.yml  release.yml
cmake/: my_projectConfig.cmake.in  version.hpp.in
include/my_project/: sample_class.hpp
src/: sample_class.cpp
test/: CMakeLists.txt  test_sample.cpp
test/unit_test/: sample_gtest_fixture.cpp
test/utest/: CMakeLists.txt  sample_gtest_simple.cpp
